# CCL

./: .gitignore  Autobuild.sh  CMakeLists.txt  Readme.md
parts/cclcompressor/: CMakeLists.txt
parts/cclcompressor/include/: cclcompressor.h
parts/cclcompressor/src/: cclcompressor.c  cclcompressorinner.h  inner.c
parts/cclcore/: CMakeLists.txt
parts/cclcore/include/: CCL.h
parts/cclcore/src/: cclcore.c  ccldatastructure.c  inner.h  trashbin.c
parts/cclgraphic/: CMakeLists.txt
parts/cclgraphic/include/: cclgraphic.h
parts/cclgraphic/src/: cclgl.cpp  cclgl.hpp  cclgraphic.c  cclgraphicinner.h  cclwindow.cpp
parts/cclinet/: CMakeLists.txt
parts/cclinet/include/: cclinet.h
parts/cclinet/src/: cclinet.c  cclinetinner.c  cclinetinner.h
parts/cclstd/: CMakeLists.txt
parts/cclstd/include/: cclstd.h
parts/cclstd/src/: cclstd.c  cclstdinner.h  cclthread.cpp  ccltimer.cpp
parts/demos/: CMakeLists.txt
parts/demos/include/demo1/: demo1.h
parts/demos/include/demo2/: demo2.h
parts/demos/src/demo1/: demo1.cpp
parts/demos/src/demo2/: demo2.cpp
parts/demos/src/demo3/: demo3.cpp
parts/demos/src/demo4/: client.cpp  server.cpp
